src/test/resources/invalid/typecheck/VarInit_Integer.vas
class Main is
    var i : Integer = 4.2
end